# ubiquitous-octo-train

./: .gitignore  cis194.cabal
Homework7/: Homework7.cabal
Homework7/app/: Main.hs
Homework7/src/: .#Lib.hs  JoinList.hs  Lib.hs  Scrabble.hs  StringBufEditor.hs
Homework7/test/: Spec.hs
app/: Main.hs
firstExercises/: cis194.cabal  readme.txt
firstExercises/src/: Homework6.hs
firstExercises/test/: Spec.hs
src/: Homework4.hs  Homework6.hs
src/Homework5/: Calc.hs  StackVM.hs
test/: Spec.hs
