name:                Homework7
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cis194#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Buffer
                     , Editor
                     , JoinList
                     , StringBufEditor
                     , StringBuffer
                     , Sized
                     , Scrabble
  build-depends:       base >= 4.7 && < 5
                     , mtl
  default-language:    Haskell2010

executable Homework7-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , Homework7
  default-language:    Haskell2010

test-suite Homework7-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HUnit                         >= 1.5.0
                     , Homework7
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/cis194
